minor fix for max-element-size. The minsize needs to be calc and cached during the regular reflow there is too much state to be remember to calc the min size for when ever it is asked for it. (see also fix nsBoxFramae.cpp) b=40596 r=evaughan